--- a/eCMS/style.css
+++ b/eCMS/style.css
@@ -19,3 +19,11 @@ body{
 #footer{
 	width: 100%; height: 80px; background: orange; clear: both; 
 }
+
+#logo{float:left;}
+#banner{float: right;}
+
+#ul{ padding-top: 8px }
+#ul li{list-style: none; display: inline;}
+#ul li a:link{color:#FFF; text-decoration: none; font-size: 20px; font-family: comic sans MS; margin:5px;}
+#ul li a:hover{color:#FFF; text-decoration: underline; font-size: 20px; padding: 5px; background: black;}
