--- a/CMS/styles/style.css
+++ b/CMS/styles/style.css
@@ -63,6 +63,11 @@ body{
 #menu li a{text-decoration: none; font-size: 16px; font-family: 'Comic Sans MS'; color: #FFF; margin:5px; padding: 5px;}
 #menu li a:hover{text-decoration: underline; background: #F99;}
 
+#categories{line-height: 50px; }
+#categories li{list-style: none; display: block; text-align: center;}
+#categories li a{text-decoration: none; font-size: 16px; font-family: 'Comic Sans MS'; color: #FFF; margin:5px; padding: 5px;}
+#categories li a:hover{text-decoration: underline; background: #000;}
+
 .sidebar{
 	width: 250px;
 	height: 1000px;
