--- a/CMS/styles/style.css
+++ b/CMS/styles/style.css
@@ -19,8 +19,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
-	font: inherit;
+	font-size: 100%;	
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -56,7 +55,17 @@ body{
 	height: 1000px;
 	background: #FFF;
 	float: left;
+	padding: 5px;
 }
+.content img{
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	float: left;
+}
+
+.content p{margin-bottom: 10px; text-align: justify;}
+.content h2{padding-bottom: 10px; padding-top: 30px;}
 
 #menu{line-height: 50px; float: left;}
 #menu li{list-style: none; display: inline;}
@@ -71,8 +80,8 @@ body{
 #categories li a:hover{text-decoration: underline; background: #000;}
 
 .sidebar{
-	width: 250px;
-	height: 1000px;
+	width: 240px;
+	height: 1010px;
 	background:#F99; 
 	float:right;
 }
@@ -83,4 +92,18 @@ body{
 	background: #000;
 	color:#FFF;
 	clear: both;
+}
+
+#rmlink{
+	background: #000;
+	color:#FFF;
+	padding: 5px;
+	float: right;
+	text-decoration: none;
+}
+
+#head{
+	text-decoration: none;
+	font-size: 23px;
+	font-family: 'Comic Sans MS';
 }
