--- a/CMS/styles/style.css
+++ b/CMS/styles/style.css
@@ -85,7 +85,20 @@ body{
 	background:#F99; 
 	float:right;
 }
+.sidebar .title{
+	background: #000;
+	color: #FFF;
+	text-align: center;
+	font-size: 20px;
+	font-family: 'Comic Sans MS';
+}
 
+.sidebar .sidebar_post_title{
+	text-decoration: none;
+	font-size: 15px;
+	padding:0px;
+	font-family: 'Comic Sans MS';
+}
 .footer{
 	width: 1000px;
 	height: 100px;
